--- a/lib/assets/index.html
+++ b/lib/assets/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" sizes="32x32" href="/logo">
-    <title>SUHAIL MD 🇵🇰🌙</title>
+    <title>MBUVI MD </title>
 
     <script>
         window.console = window.console || function(t) {};
