--- a/lib/assets/index.html
+++ b/lib/assets/index.html
@@ -411,7 +411,7 @@ a:hover{
     </div>
 
 
-    <h1 style="color: #d4cfcf; "> SUHAIL MD ❤️</h1>
+    <h1 style="color: #d4cfcf; "> MBUVI MD ❤️</h1>
 <br>
     <h1>
         A Simple <span style="border-bottom:4px dotted #3c3c3c; color: #d4cfcf;">Pakistani</span> Whatsapp Bot.
